--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "nedb": "^1.8.0"
   },
   "main": "app.js"
 }
