added pug for view templating

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "express": "^4.13.4",
-    "nedb": "^1.8.0"
+    "nedb": "^1.8.0",
+    "pug": "^2.0.0-beta2"
   },
   "main": "app.js"
 }
