--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^4.13.4",
     "nedb": "^1.8.0",
-    "pug": "^2.0.0-beta2"
+    "pug": "^2.0.0-beta2",
+    "request": "^2.72.0"
   },
   "main": "app.js"
 }
