--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "nedb": "^1.8.0",
+    "nedb-session-store": "^1.1.1",
     "pug": "^2.0.0-beta2",
     "request": "^2.72.0"
   },
